# sql-throughput-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile.benchmark  LICENSE  Makefile  README.md  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml
db/: init.sql
docs/: methodology.md
results/: run-20260207T002833Z.json  run-20260207T003446Z.json  run-20260207T003640Z.json
scripts/: generate_data.py
src/: __init__.py  config.py  main.py  orchestrator.py  py.typed  reporter.py
src/domain/: __init__.py  models.py
src/infrastructure/: __init__.py  db_factory.py
src/strategies/: __init__.py  abstract.py  async_stream.py  cursor_pagination.py  multiprocessing.py  naive.py  pooled_sync.py
src/utils/: __init__.py  logging.py  profiler.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_async_safety.py  test_smoke.py
tests/unit/: __init__.py  test_async_stream_guardrail.py  test_async_stream_ranges.py  test_basics.py  test_logging.py  test_multiprocessing_context.py  test_orchestrator_lifecycle.py  test_orchestrator_merge.py
