[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sql-throughput-challenge"
version = "0.1.0"
description = "Benchmarking suite comparing SQL read strategies (sync, async, pooling, multiprocessing) against PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aluizio Lira", email = "alumlira@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary,pool]>=3.1",
  "asyncpg>=0.29",
  "psutil>=5.9",
  "tenacity>=8.2",
  "rich>=13.0",
]

[project.scripts]
sql-throughput-challenge = "src.main:app"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.1"
ruff = ">=0.4"
mypy = ">=1.8"
types-psutil = "*"
types-python-dateutil = "*"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "N", "PL", "RUF"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring database",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "tenacity", "tenacity.*", "typer", "typer.*", "rich", "rich.*", "psycopg_pool", "psycopg_pool.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
